[gd_scene load_steps=12 format=2]

[ext_resource path="res://lon tawa/kije.png" type="Texture" id=1]
[ext_resource path="res://lon tawa/kije.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.2655, 38.4835 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/idle/node = SubResource( 4 )
states/idle/position = Vector2( 201.5, 102.5 )
states/walk/node = SubResource( 5 )
states/walk/position = Vector2( 401, 89.5 )
transitions = [ "idle", "walk", SubResource( 6 ), "walk", "idle", SubResource( 7 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="kije" type="KinematicBody2D" groups=[
"color",
"kije",
"lon tawa",
"set-color",
]]
z_index = 10
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="collision box" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="floor1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="floor2" type="RayCast2D" parent="."]
position = Vector2( -38, 0 )
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="floor3" type="RayCast2D" parent="."]
position = Vector2( 38, 0 )
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="climbl1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -55, 0 )
collision_mask = 2

[node name="climbl2" type="RayCast2D" parent="."]
position = Vector2( 0, -38 )
enabled = true
cast_to = Vector2( -55, 0 )
collision_mask = 2

[node name="climbl3" type="RayCast2D" parent="."]
position = Vector2( 0, 38 )
enabled = true
cast_to = Vector2( -55, 0 )
collision_mask = 2

[node name="climbr1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 55, 0 )
collision_mask = 2

[node name="climbr2" type="RayCast2D" parent="."]
position = Vector2( 0, -38 )
enabled = true
cast_to = Vector2( 55, 0 )
collision_mask = 2

[node name="climbr3" type="RayCast2D" parent="."]
position = Vector2( 0, 38 )
enabled = true
cast_to = Vector2( 55, 0 )
collision_mask = 2

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 9 )
